fix containers shrinking too small to fit content

--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,9 @@ body {
   flex: 1 1 40%;
   
   min-width: 24rem;
+  min-height: 60rem;
   position: relative;
-
+  
   background: url(extras/halie-west-trees.jpg);
   background-size: cover;
   background-position: center;
@@ -79,6 +80,7 @@ body {
 
 .intro-block {
   height: 34vh;
+  min-height: 20rem;
   font-size: 1.3rem;
   padding-top: 9rem;
   padding-left: 3rem;
@@ -96,6 +98,7 @@ h2 {
 
 .form-controls-container {
   height: 33vh;
+  min-height: 20rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -136,6 +139,7 @@ label {
 
 .button-container {
   height: 33vh;
+  min-height: 20rem;
   padding-top: 2rem;
   background-color: #f8f8fa;
 }
